Dealt with Alt Text issue

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <!-- The QR Code dive is 320x500 -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Outfit:wght@100;500&family=Roboto&display=swap" rel="stylesheet">
@@ -33,9 +32,9 @@
 
 </head>
 <body style="background-color: hsl(212, 45%, 89%)">
-
+<section></section>
   <div class="qr-code-div">
-    <img class="qr-code" src="images/image-qr-code.png">
+    <img class="qr-code" src="images/image-qr-code.png" alt="This is the QR Code">
     <p class="p1">Improve your front-end<br>skills by building projects</p>
     <p  class="p2"> Scan the QR code to visit Frontend<br>Mentor and take your coding skills<br>to the next level </p>
   </div>
@@ -45,5 +44,7 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://github.com/ifeelducky">ifeelducky</a>.
   </div>
+  </section>
+  </body>
 </body>
 </html>
